updates to pom.xml